lldpd (0.5.0)

  * lldpd can now handle several systems on the same port. This
    modification also allows to speak to a switch using CDP and LLDP
    for example.
  * The way that lldpd gathers information for each port has been
    abstracted. This should allow to support more systems (BSD for
    examples) or switch cores in the future. Sending/receive support
    is also abstracted.
  * Fix EDP VLAN handling

lldpd (0.4)

  * Rewrite of packet builder and parser to be able to cope with
    architecture that cannot do unaligned read. For decoder, we don't
    cast structures any more since they can be unaligned. For encoder,
    we use memcpy through the use of macro that build packets step by
    step.

lldpd (0.3.2)

  * Fix LLDP-MED support

lldpd (0.3.1)

  * Misc fixes, including memory leaks

lldpd (0.3)

  * Initial support of LLDP-MED
  * Fix for bridge detection (don't send bridge ioctl on random interfaces)
  * For bonded devices, get the real hardware address. For inactive
    slaves, transmit using a random MAC address.

lldpd (0.2.1)

  * Fix a syntax error in manual page
  * Fix open() calls

lldpd (0.2)

  * Add privilege separation
  * Add FDP support
  * Support CDP encapsulated into native VLAN
  * Various fixes

lldpd (0.1)

  * Initial release